.deploy/k8s/app/2.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-deployment
spec:
  replicas: 12
  selector:
    matchLabels:
      app: ${APP_NAME}-deployment
  template:
    metadata:
      labels:
        app: ${APP_NAME}-deployment
    spec:
      containers:
        - name: ${APP_NAME}-deployment
          image: mapineda48/agape-app-sena:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
