.deploy/k8s/app/3.service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  annotations:
    nginx.ingress.kubernetes.io/ssl-services: "${APP_NAME}-service"
spec:
  selector:
    app: ${APP_NAME}-deployment
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
